# FoundLab

./: .example.agent_prompt  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
docs/superpowers/plans/: 2026-04-30-foundlab-phase-1-foundation.md
docs/superpowers/specs/: 2026-04-30-foundlab-backtesting-platform-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  main.tsx
skill/foundlab-agent-workflow/: SKILL.md
skill/foundlab-agent-workflow/agents/: openai.yaml
src/foundlab/api/: __init__.py  main.py  schemas.py
src/foundlab/api/routes/: assets.py  runs.py
src/foundlab/core/: enums.py  models.py
src/foundlab/core/data/: akshare_provider.py  normalization.py  pipeline.py  provider.py
src/foundlab/storage/: database.py  models.py  repositories.py
src/foundlab/worker/: __init__.py  jobs.py
tests/: test_package_import.py
tests/api/: test_api.py
tests/core/: test_akshare_provider.py  test_contracts.py  test_data_pipeline.py  test_normalization.py
tests/storage/: test_market_data_cache.py  test_repositories.py
tests/worker/: test_jobs.py
