[project]
name = "foundlab"
version = "0.1.0"
description = "Dashboard-first backtesting platform for investment decision review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.17",
    "fastapi>=0.115",
    "pandas>=2.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundlab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["akshare"]
ignore_missing_imports = true
